# lunchable-splitlunch

./: .releaserc.json  README.md  mkdocs.yaml  pyproject.toml  requirements.txt
.github/workflows/: tests.yaml
docs/: gen_pages.py  index.md
lunchable_splitlunch/: __about__.py  cli.py  lunchmoney_splitwise.py  models.py
requirements/: requirements-all.py3.10.txt  requirements-all.py3.11.txt  requirements-all.py3.12.txt  requirements-all.py3.8.txt  requirements-all.py3.9.txt  requirements-docs.txt  requirements-test.txt
tests/: __init__.py  conftest.py  test_splitwise.py
tests/cassettes/: test_update_balance.yaml
