[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "Justin Flannery", email = "juftin@juftin.com"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy"
]
dependencies = [
  "lunchable>=1.2.1",
  "click",
  "rich",
  "python-dateutil",
  "splitwise>=2.3.0,<3.0.0"
]
description = "LunchMoney + Splitwise Integration"
dynamic = ["version"]
license = "MIT"
name = "lunchable-splitlunch"
readme = "README.md"
requires-python = ">=3.8"

[project.entry-points."lunchable.cli"]
splitlunch = "lunchable_splitlunch.cli:splitlunch"

[project.scripts]
splitlunch = "lunchable_splitlunch.cli:splitlunch"

[project.urls]
Documentation = "https://juftin.github.io/lunchable-splitlunch"
Issues = "https://github.com/juftin/lunchable-splitlunch/issues"
Source = "https://github.com/juftin/lunchable-splitlunch"

[tool.coverage.paths]
lunchable_splitlunch = ["lunchable_splitlunch", "*/lunchable-splitlunch/lunchable_splitlunch"]
tests = ["tests", "*/lunchable-splitlunch/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:"
]
show_missing = true

[tool.coverage.run]
branch = true
omit = [
  "lunchable_splitlunch/__about__.py"
]
parallel = true
source_pkgs = ["lunchable_splitlunch", "tests"]

[tool.cruft]
skip = [
  "lunchable_splitlunch/__about__.py",
  "lunchable_splitlunch/__init__.py",
  "tests/"
]

[tool.hatch.env]
requires = ["hatch-pip-compile", "hatch-mkdocs"]

[tool.hatch.env.collectors.mkdocs.docs]
path = "mkdocs.yaml"

[tool.hatch.envs.all]
pip-compile-constraint = ""
template = "test"

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.default]
pip-compile-constraint = "default"
post-install-commands = [
  "- pre-commit install"
]
type = "pip-compile"

[tool.hatch.envs.default.scripts]
cov = "hatch run test:cov"
test = "hatch run test:test"

[tool.hatch.envs.docs]
detached = false
pip-compile-constraint = "default"
template = "docs"
type = "pip-compile"

[tool.hatch.envs.gen]
detached = true

[tool.hatch.envs.gen.scripts]
release = [
  "npm install --prefix .github/semantic_release/",
  "npx --prefix .github/semantic_release/ semantic-release {args:}"
]

[tool.hatch.envs.lint]
dependencies = [
  "mypy>=1.6.1",
  "ruff~=0.1.7"
]
detached = true
type = "pip-compile"

[tool.hatch.envs.lint.scripts]
all = [
  "style",
  "typing"
]
fmt = [
  "ruff format {args:.}",
  "ruff --fix {args:.}",
  "style"
]
precommit = [
  "pre-commit run --all-files"
]
style = [
  "ruff {args:.}",
  "ruff format --check --diff {args:.}"
]
typing = "mypy --install-types --non-interactive {args:lunchable_splitlunch tests}"

[tool.hatch.envs.test]
dependencies = [
  "pytest",
  "pytest-cov",
  "vcrpy"
]

[tool.hatch.envs.test.scripts]
cov = "pytest --cov --cov-config=pyproject.toml {args:tests}"
test = "pytest {args:tests}"

[tool.hatch.version]
path = "lunchable_splitlunch/__about__.py"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
ignore = [
  # Ignore checks for possible passwords
  "S105",
  "S106",
  "S107",
  # Ignore complexity
  "C901",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
  # Boolean-typed positional argument in function definition
  "FBT001",
  # Boolean default positional argument in function definition
  "FBT002",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Exception must not use a string literal, assign to variable first
  "EM101"
]
line-length = 88
select = [
  "A",  # flake8-builtins
  "ARG",  # flake8-unused-arguments
  "B",  # flake8-bugbear
  "C",  # mccabe
  "DTZ",  # flake8-datetimez
  "E",  # pycodestyle (Error)
  "EM",  # flake8-errmsg
  "F",  # Pyflakes
  "FBT",  # flake8-boolean-trap
  "I",  # isort
  "ICN",  # flake8-import-conventions
  "ISC",  # flake8-implicit-str-concat
  "N",  # pep8-naming
  "PLC",  # Pylint (Convention message)
  "PLE",  # Pylint (Error message)
  "PLR",  # Pylint (Refactor message)
  "PLW",  # Pylint (Warning message)
  "Q",  # flake8-quotes
  "RUF",  # Ruff-specific rules
  "S",  # flake8-bandit
  "T",  # flake8-debugger (T10) and flake8-print (T20)
  "TID",  # flake8-tidy-imports
  "UP",  # pyupgrade
  "W",  # pycodestyle (Warning)
  "YTT"  # flake8-2020
]
target-version = "py38"

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.isort]
known-first-party = ["lunchable_splitlunch"]

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.ruff.pydocstyle]
convention = "numpy"
